# forge-nightshift

./: .gitignore  FIX-TRACKER.md  OVERNIGHT-TRACKER.md  RED-TEAM-RESULTS.md  TODO-CHECKLIST.md  TRACKER-tauri-pipeline-upgrade.md  drip-sender.sh  index.html  package-lock.json  package.json  regen-emails.py  tailwind.config.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/db/: mod.rs
src-tauri/src/db/migrations/: 001_initial.sql  002_category_coverage.sql  003_translation_fields.sql  004_name_normalized.sql  005_enrichment_v2.sql  006_qwen35_models.sql  007_qwen35_research.sql  008_research_fixes.sql  009_auto_approve_threshold.sql  010_enrich_concurrency.sql  011_geocoding.sql  012_normalize_country.sql  013_deep_enrichment.sql  014_technique_knowledge.sql  015_indexes.sql  016_email_templates.sql  017_companies_house_verified.sql  018_email_last_error.sql  019_campaigns.sql  020_self_learning.sql  (+18 more)
src-tauri/src/pipeline/: activity.rs  audit.rs  companies_house.rs  contacts.rs  deep_enrich.rs  director_intel.rs  embeddings.rs  enrich.rs  enrich_v2.rs  investor_match.rs  mod.rs  outreach.rs  outreach_learner.rs  push.rs  raw_scraper.rs  report.rs  research.rs  synthesize.rs  technique_aggregate.rs  template_outreach.rs  verify.rs
src-tauri/src/services/: anthropic.rs  apollo.rs  brave.rs  companies_house.rs  deepseek.rs  email_verify.rs  mod.rs  nominatim.rs  ollama.rs  openai.rs  opencorporates.rs  postcodes.rs  resend.rs  scraper.rs  supabase.rs
(+30 files in other folders)
