[package]
name = "forge-nightshift"
version = "0.42.1"
description = "Overnight company discovery & outreach for ForgeOS"
authors = ["Fractional Forge"]
edition = "2021"

[lib]
name = "forge_nightshift_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
rusqlite = { version = "0.32", features = ["bundled"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
base64 = "0.22"
regex = "1"
futures = "0.3"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
rand = "0.8"
